<resources>
    <string name="app_name">Bullets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_news_and_politics"><![CDATA[News & Politics]]></string>
    <string name="nav_science_and_technology"><![CDATA[Science & Technology]]></string>
    <string name="nav_health_and_fitness"><![CDATA[Health & Fitness]]></string>
    <string name="nav_entertainment">Entertainment</string>
    <string name="nav_food_and_drink"><![CDATA[Food & Drink]]></string>
    <string name="nav_travel">Travel</string>
    <string name="nav_sports">Sports</string>
    <string name="action_sort_by">Sort By</string>
    <string name="action_sort_by_recency">Recent</string>
    <string name="action_sort_by_trending">Trending</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="news_unavailable">News Unavailable</string>
    <string name="api_error_message">Api Error</string>
    <string name="empty"></string>
    <string name="article_image_content_description">Article Image</string>
    <string name="source_logo_content_description">Source Logo</string>
    <string name="bullet_symbol">&#8226;&#160;</string>
    <string name="action_share">Share</string>
    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">Bullets Widget</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="read_full_story">Read Full Story</string>
    <string name="app_icon">App Icon</string>
</resources>
